--- a/loki-http/pom.xml
+++ b/loki-http/pom.xml
@@ -9,10 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.coldwindx</groupId>
-    <artifactId>loki-api</artifactId>
+    <artifactId>loki-http</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>loki-api</name>
-    <description>loki-api</description>
+
     <properties>
         <java.version>21</java.version>
     </properties>
