--- a/loki-service/pom.xml
+++ b/loki-service/pom.xml
@@ -18,6 +18,15 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
+
+        <!-- AI & MCP -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-client-chat</artifactId>
+            <version>1.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- okhttp3 -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
@@ -44,5 +53,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
