--- a/loki-service/pom.xml
+++ b/loki-service/pom.xml
@@ -3,20 +3,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.coldwindx</groupId>
+        <artifactId>Loki</artifactId>
+        <version>0.0.1</version>
     </parent>
-    <groupId>com.coldwindx</groupId>
+
     <artifactId>loki-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>loki-service</name>
     <description>loki-service</description>
 
     <properties>
         <java.version>21</java.version>
     </properties>
+
     <dependencies>
 
         <!-- AI & MCP -->
@@ -57,10 +57,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-
     </dependencies>
+
 </project>
