多范围共享bean

--- a/loki-http/pom.xml
+++ b/loki-http/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.coldwindx</groupId>
             <artifactId>loki-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
