--- a/loki-netty/pom.xml
+++ b/loki-netty/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.58</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.coldwindx</groupId>
+            <artifactId>loki-endpoint</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
