--- a/loki-netty/pom.xml
+++ b/loki-netty/pom.xml
@@ -55,7 +55,7 @@
 
         <dependency>
             <groupId>com.coldwindx</groupId>
-            <artifactId>loki-endpoint</artifactId>
+            <artifactId>loki-endpoint-spring-boot-starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
