修复线程池问题

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>loki-http</module>
 		<module>loki-mcp</module>
 		<module>loki-rocket-spring-boot-starter</module>
+		<module>loki-endpoint-spring-boot-starter</module>
 	</modules>
 
 	<properties>
