--- a/loki-netty/pom.xml
+++ b/loki-netty/pom.xml
@@ -54,12 +54,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.coldwindx</groupId>
-            <artifactId>loki-endpoint-spring-boot-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -69,6 +63,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.coldwindx</groupId>
+            <artifactId>loki-endpoint-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
