--- a/loki-http/pom.xml
+++ b/loki-http/pom.xml
@@ -57,6 +57,12 @@
             <version>0.0.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.coldwindx</groupId>
+            <artifactId>loki-shared-spring-boot-starter</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
