--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>loki-quartz</module>
 		<module>loki-rocket-spring-boot-starter</module>
 		<module>loki-endpoint-spring-boot-starter</module>
+		<module>loki-schedule-spring-boot-starter</module>
 	</modules>
 
 	<properties>
