--- a/loki-schedule-spring-boot-starter/pom.xml
+++ b/loki-schedule-spring-boot-starter/pom.xml
@@ -14,7 +14,7 @@
     <description>loki-schedule-spring-boot-starter</description>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -34,6 +34,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
             <version>3.5.15</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.59</version>
         </dependency>
     </dependencies>
 
